<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/task_list"
    tools:context=".Account.RecoveryActivity">

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="373dp"
        android:layout_height="53dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edittextbackground"
        android:ems="10"
        android:hint="@string/email_label"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/buttonRecovery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <Button
        android:id="@+id/buttonRecovery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recovery_link"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress" />




    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRecovery">
        <TextView
            android:id="@+id/textViewPassRecovered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recovery_email_send"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/red"
            tools:text="@string/recovery_email_send"
            android:visibility="invisible"
            />
        <TextView
            android:id="@+id/recoveryAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:onClick="goToLogin"
            android:textAlignment="center"
            android:text="@string/login_link"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="110dp"
        android:text="@string/email_label"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black"
        tools:text="@string/email_label" />





</androidx.constraintlayout.widget.ConstraintLayout>